feat(plm),报错修改